--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Traffic Statistics/TrafficStatisticsGrid.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Traffic Statistics/TrafficStatisticsGrid.html
@@ -5,7 +5,7 @@
     <div ng-repeat="groupKey in groupKeys">
         <vr-datagrid datasource="groupKey.data" ng-show="groupKey == selectedGroupKey" menuactions="menuActions" issubgrid>
             <vr-datagridcolumn headertext="groupKey.gridHeader" field="'GroupKeyValues[0].Name'" widthfactor="20" isclickable="'true'" onclicked="onEntityClicked"></vr-datagridcolumn>
-            <vr-datagridcolumn ng-repeat="measure in measures" headertext="measure.description" field="measure.propertyName" type="'Number'"></vr-datagridcolumn>
+            <vr-datagridcolumn ng-repeat="measure in measures" headertext="measure.description" field="measure.propertyName" tag="measure" type="'Number'" onsortchanged="onMainGridSortChanged"></vr-datagridcolumn>
             <vr-datagridexpandablerow ng-if="checkExpandablerow()">
                 <div ng-include="'/Client/Modules/Analytics/Views/Traffic Statistics/TrafficStatisticsGrid.html'"></div>
             </vr-datagridexpandablerow>
