--- a/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/EditorTemplates/CodeTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/EditorTemplates/CodeTemplate.html
@@ -1,6 +1,6 @@
-﻿<div ng-controller="CodeController">
+﻿<div ng-controller="RoutingRules_CodeTemplateController">
 
-    <vr-columns colnum="4" >
+    <vr-columns colnum="4">
         <vr-row removeline>
             <vr-columns colnum="6" colnumsm="4">
                 <vr-label standalone>Code</vr-label>
