--- a/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/EditorTemplates/ZoneTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/EditorTemplates/ZoneTemplate.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="ZoneController">
+﻿<div ng-controller="RoutingRules_ZoneTemplateController">
 
     <vr-columns colnum="4">
         <vr-row removeline>
