--- a/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/RoutingRulesManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/RoutingRulesManagement.html
@@ -1,4 +1,4 @@
-﻿<vr-panel ng-controller="Routing_RoutingRulesManagementController">
+﻿<vr-panel ng-controller="RoutingRules_RoutingRulesManagementController">
     <vr-form name="formFilter">
 
         <div ng-hide="filterSectionCollapsed">
@@ -32,7 +32,7 @@
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
                 <div transclude-to="buttons">
                     <vr-button type="Search" formname="formFilter" data-onclick="searchClicked"></vr-button>
-                    <vr-button type="Add" data-onclick="addRule"></vr-button>
+                    <vr-button type="Add" formname="formFilter" data-onclick="addRouteRule"></vr-button>
                 </div>
             </vr-actionbar>
         </vr-row>
