--- a/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/EditorTemplates/CustomerTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/EditorTemplates/CustomerTemplate.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="CustomerController">
+﻿<div ng-controller="RoutingRules_CustomerTemplateController">
     <vr-columns colnum="2">
         <div class="dropdown dropdown-custom " id="dropdownMenuddl">
             <label class="dropdown-toggle hand-cursor" style="padding-top: 6px" ng-style="carrierAccountSelectionOption==2?{'color':'#D44A47'}:''" type="button" id="dropdownMenuCu" data-toggle="dropdown" aria-expanded="true" ng-model='carrierAccountSelectionOption'>
@@ -15,11 +15,11 @@
             </ul>
         </div>
     </vr-columns>
-    
+
     <vr-columns colnum="2">
 
         <vr-select ismultipleselection isrequired datasource="optionsCustomers.datasource" selectedvalues="optionsCustomers.selectedvalues" datatextfield="Name" datavaluefield="CarrierAccountID"
                    entityname="Customers"></vr-select>
-        
+
     </vr-columns>
 </div>
