--- a/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/EditorTemplates/PriorityTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/EditorTemplates/PriorityTemplate.html
@@ -1,12 +1,12 @@
-﻿<div ng-controller="PriorityController">
+﻿<div ng-controller="RoutingRules_PriorityTemplateController">
     <vr-columns colnum="2">
-        <vr-select ismultipleselection hideselectedvaluessection="true" datasource="optionsSuppliers.datasource" 
-                   selectedvalues="optionsSuppliers.selectedvalues" datatextfield="Name" datavaluefield="CarrierAccountID"
+        <vr-select ismultipleselection hideselectedvaluessection="true" datasource="suppliers"
+                   selectedvalues="selectedSuppliers" datatextfield="Name" datavaluefield="CarrierAccountID"
                    entityname="Suppliers" isrequired></vr-select>
-        
+
     </vr-columns>
-    <vr-columns colnum="4"  ng-class="optionsSuppliers.selectedvalues.length == 0 ? 'emptycol':''">
-        <ul class="list-group" style="margin:0px" ng-show="optionsSuppliers.selectedvalues.length > 0">
+    <vr-columns colnum="4" ng-class="selectedSuppliers.length == 0 ? 'emptycol':''">
+        <ul class="list-group" style="margin:0px" ng-show="selectedSuppliers.length > 0">
             <li class="list-group-item list-custom" style="margin:1px;border:0px;font-size:12px">
                 <div style="display:inline-block;padding-left:25px">Supplier</div>
                 <div style="float: right;">
@@ -15,10 +15,10 @@
                 </div>
             </li>
         </ul>
-        <ul class="list-group dragbelzone" ng-sortable="itemsSortable" ng-show="optionsSuppliers.selectedvalues.length > 0">
-            <li ng-repeat="item in optionsSuppliers.selectedvalues" class="list-group-item list-custom" style="margin: 1px; font-size: 12px">
+        <ul class="list-group dragbelzone" ng-sortable="itemsSortable" ng-show="selectedSuppliers.length > 0">
+            <li ng-repeat="item in selectedSuppliers" class="list-group-item list-custom" style="margin: 1px; font-size: 12px">
                 <i class="glyphicon glyphicon-th-list handeldrag"></i>
-                {{item.Name}}
+                <div style="display:inline-block;max-width:200px;">{{item.Name}}</div>
                 <i class="glyphicon glyphicon-remove hand-cursor" style="float: right; padding: 5px; cursor:default" ng-click="selectSupplier($event,item)"></i>
 
                 <div style="float: right">
